# frtraining

./: .gitignore  Package.swift  README.md  convert_to_usdz.py
.build/: build.db  debug.yaml  release.yaml
.github/workflows/: swift.yml
CorePackage/: Package.swift
Sources/FricuApp/: AIEngine.swift  ActivityBalanceAnalyzer.swift  ActivityOfflineBackup.swift  AdvancedEngines.swift  AthleteIdentityNormalizer.swift  AuthController.swift  AuthGateView.swift  BikeComputerLightRenderer.swift  ChartDisplayMode.swift  CyclingCalorieEstimator.swift  FinalStageServices.swift  FricuApp.swift  GoldenCheetahMetricCatalog.swift  HeartRateBluetooth.swift  HeartRateFreshnessPolicy.swift  Importers.swift  Info.plist  IntervalsAPI.swift  LaunchScreen.storyboard  LiveRideFITWriter.swift  Localization.swift  MetricStoryEngine.swift  Models.swift  NutritionFoodSearchService.swift  OpenAICoach.swift  PerformanceEstimator.swift  PowerAssertionController.swift  (+15 more)
ios/: Fricu-iOS-Info.plist  project.yml
scripts/: backfill-trainer-fits.sh  build-dist.sh  generate-app-icon.py  load-test-server.py  make-app-bundle.sh  migrate-activities-account-scope.py  migrate-athlete-name-model-v2.py  run-bg.sh  run-dev.sh  run-foreground.sh  run-server.sh  test-coverage-100.sh
server/: Cargo.toml  Makefile  db.c  event_loop.c  fricu-server  fricu_server.py  http.c  logger.c  logger.h  main.c  server.h  server_internal.h  unit-tests  util.c  write_queue.c
server/data/: fricu.db
server/src/: main.rs  perf_client.rs
server/tests/: perf_50k.sh  perf_client.c  test_python_server.py  unit_tests.c
(+1387 files in other folders)
