[package]
name = "fricu-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
anyhow = "1"

[[bin]]
name = "fricu-server"
path = "src/main.rs"

[[bin]]
name = "perf_client"
path = "src/perf_client.rs"
